--- a/omod/src/main/webapp/resources/css/disa.css
+++ b/omod/src/main/webapp/resources/css/disa.css
@@ -1,23 +1,23 @@
-#vlResultsTable {
+#vlResultsTable, #vlResultsTable1 {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	border-collapse: collapse;
 	width: 100%;
 }
 
-#vlResultsTable td, #vlResultsTable th {
+#vlResultsTable td, #vlResultsTable th, #vlResultsTable1 td, #vlResultsTable1 th {
 	border: 1px solid #ddd;
 	padding: 8px;
 }
 
-#vlResultsTable tr:nth-child(even) {
+#vlResultsTable tr:nth-child(even), #vlResultsTable1 tr:nth-child(even) {
 	background-color: #f2f2f2;
 }
 
-#vlResultsTable tr:hover {
+#vlResultsTable tr:hover, #vlResultsTable1 tr:hover {
 	background-color: #ddd;
 }
 
-#vlResultsTable th {
+#vlResultsTable th, #vlResultsTable1 th {
 	padding-top: 12px;
 	padding-bottom: 12px;
 	text-align: left;
