DOI-76 Search and list VL Results
Implemented controller with search action
Added Carbon Design Grid System, used by current OpenMRS
(https://wiki.openmrs.org/pages/viewpage.action?pageId=235277496).

--- a/omod/src/main/webapp/resources/css/disa.css
+++ b/omod/src/main/webapp/resources/css/disa.css
@@ -44,3 +44,13 @@
 #error_msg {
 	background-color: #FFB6C1;
 }
+
+#searchForm .cds--css-grid {
+	margin-left: 0;
+	padding-left: 5px;
+	margin-bottom: 3px;
+}
+
+#searchForm .error {
+	font-size: small;
+}
