DOI-75 Improve option spacing

--- a/omod/src/main/webapp/resources/css/disa.css
+++ b/omod/src/main/webapp/resources/css/disa.css
@@ -36,13 +36,9 @@
 	list-style: none;
 }
 
-#vlResultsTable .actions li:not(:last-child) {
-	border-right: 1px solid black;
-}
-
 #vlResultsTable .actions li {
 	display: inline-block;
-	padding: 0 0.5rem;
+	padding: 0.5rem 0.5rem;
 	text-align: center;
 }
 
