DOI-102 Translation and UI/UX Improvements

--- a/omod/src/main/webapp/resources/css/disa.css
+++ b/omod/src/main/webapp/resources/css/disa.css
@@ -140,3 +140,16 @@ div.success {
 #openmrs_msg {
 	font-weight: bold;
 }
+
+.float-right {
+	float: right;
+}
+
+.clear {
+	clear: both;
+}
+
+/* Add in-height so that popover does not get clipped */
+.dataTables_scrollBody {
+	min-height: 220px;
+}
