DOI-155 Adapt manage results interface to include CD4 result types

--- a/omod/src/main/webapp/common/searchForm.jspf
+++ b/omod/src/main/webapp/common/searchForm.jspf
@@ -73,6 +73,14 @@
 				</form:option>
 			</form:select>
 		</div>
+		<div>
+			<label for="typeOfResult">
+				<openmrs:message code="disa.lab.result.type" />:
+			</label>
+			<form:select path="typeOfResult">
+				<form:options items="${types}"/>
+			</form:select>
+		</div>
 		<div class="divider"></div>
 		<div>
 			<label for="nid">
