--- a/omod/src/main/webapp/resources/css/disa.css
+++ b/omod/src/main/webapp/resources/css/disa.css
@@ -1,24 +1,29 @@
-.vlResultsTable {
+.resultsTable {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	border-collapse: collapse;
 	width: 100%;
 }
 
-.vlResultsTable td,
-.vlResultsTable th {
+.resultsTable tr th:first-child,
+.resultsTable tr td:first-child {
+	display: none;
+}
+
+.resultsTable td,
+.resultsTable th {
 	border: 1px solid #ddd;
 	padding: 8px;
 }
 
-.vlResultsTable tr:nth-child(even) {
+.resultsTable tr:nth-child(even) {
 	background-color: #f2f2f2;
 }
 
-.vlResultsTable tr:hover {
+.resultsTable tr:hover {
 	background-color: #ddd;
 }
 
-.vlResultsTable th {
+.resultsTable th {
 	padding-top: 12px;
 	padding-bottom: 12px;
 	text-align: left;
@@ -26,26 +31,26 @@
 	color: white;
 }
 
-.vlResultsTable .actions {
+.resultsTable .actions {
 	cursor: pointer;
 }
 
-.vlResultsTable .actions-tooltip {
+.resultsTable .actions-tooltip {
 	display: none;
 	background-color: #ddd;
 }
 
-.vlResultsTable .actions-tooltip[data-show] {
+.resultsTable .actions-tooltip[data-show] {
 	display: block;
 }
 
-.vlResultsTable .actions-tooltip ul {
+.resultsTable .actions-tooltip ul {
 	padding: 0;
 	margin-top: 0;
 	margin-bottom: 0;
 }
 
-.vlResultsTable .actions-tooltip li {
+.resultsTable .actions-tooltip li {
 	list-style: none;
 	padding: 0.5rem 0.5rem;
 }
