--- a/omod/src/main/webapp/resources/css/disa.css
+++ b/omod/src/main/webapp/resources/css/disa.css
@@ -172,3 +172,24 @@ button.dt-button.buttons-columnVisibility:before {
 button.dt-button.buttons-columnVisibility.active:before {
 	content: "- ";
 }
+
+.input-wrapper {
+	display: flex;
+	border: 1px solid cadetblue;
+}
+
+.input-wrapper:focus-within {
+    outline: 1px solid black;
+    border-radius: 3px;
+    border: 1px solid black;
+}
+
+.input-wrapper .prefix {
+	font-size: 0.9em;
+	padding: 1px 0 1px 1px;
+}
+
+.input-wrapper input {
+	border: none;
+	outline: none;
+}
