DOI-288 CRAG results: Include on type of result search

--- a/omod/src/main/webapp/common/searchForm.jspf
+++ b/omod/src/main/webapp/common/searchForm.jspf
@@ -99,6 +99,9 @@
 				<form:option value="TBLAM">
 					<openmrs:message code="disa.typeOfResult.TBLAM" />
 				</form:option>
+				<form:option value="CRAG">
+					<openmrs:message code="disa.typeOfResult.CRAG" />
+				</form:option>
 			</form:select>
 		</div>
 		<div class="divider"></div>
